--- a/styles.css
+++ b/styles.css
@@ -1,110 +1,83 @@
-body{
-    flex-wrap: wrap;
-    padding: 0;
-    margin: 0px;
-}
 
-.container{
-    padding: 0px;
-    margin: 0px;
-    background-color: rgb(111, 223, 190);
-    height: 100vh;
-    width: 90% ;
-    background-image:url(imagencentral.png);
-    background-repeat: no-repeat;
-    background-position: 100% 100%;
-    background-size: 10 10em;
-    flex-wrap: wrap;
-    min-width: 250px;
-    
-}
-
-
-.colorBoton{
+.colorBoton {
     background-color: rgb(212, 155, 112);
     display: flex;
-    color:grey;
+    color: grey;
     border-radius: 2vh;
     min-width: 300px;
-    
+}
+
+.menuDesplegable {
+    background-color:rgb(171, 33, 125);
+    height: 50%;
+    background-repeat: initial 20% 20%;
+    background-color: dimgrey(55, 114, 82);
+    border-top: 2vh;
+}
+
+.pruebaBarra {
+    display: flex;
+    width:100%;
+    height: 13vh;
+    align-content: center ;
+    background-color:rgb(171, 33, 125)
+
 }
 
 
-
-    
-.menuDesplegable{
-    background-color:rgb(248, 235, 86);
-    height: 100%;
-    background-repeat:initial 20% 20%;
-    background-color:dimgrey(55, 114, 82);
-    border-radius:  2vh;   
-}
-
-.pruebaBarra{
-    background-color:rgb(248, 235, 86);
-    color: rgb(300, 300, 500);
-    height: 100%;
-    border-width: 3vh;
-    border-style:double;
-    margin-top: 1vh;
-    background-color:dimgrey(55, 114, 82);
-    border-radius:  2vh;
-    min-width: 250px;
-} 
-
-.tituloContacto{
-    transition: unset;
-}
-
-
-.contactoConfiguracion{
+.contactoConfiguracion {
     height: 25%;
     width: 70vh;
     background-color: transparent;
-    background-repeat:no-repeat 20% 20%;
+    background-repeat: no-repeat 20% 20%;
     background-position-y: center;
     background-size: 70 20em;
     margin-inline-start: 10%;
 }
 
-.contactoMovil{
+.contactoMovil {
     background-position-y: center;
 
 }
 
-.mapaUbicacion{
+.mapaUbicacion {
     height: 25%;
     width: 100%;
-    background-position-y:center;
+    background-position-y: center;
     background-size: 50%;
     border-top: 50%;
-    background-color: rgb(248, 235, 86);
+    background-color:rgb(44, 44, 84);
     text-align: center;
 }
 
-.barraMedia{
+.barraInferior {
     display: flex;
-    height: 70vh;
-    width: 100%; 
-}
-
-.barraInferior{
-    display: flex;
-    height: 10%;
+    
+    height: 5vh;
     width: 1vh;
 }
 
-.logoBarra{
+.logoBarra {
     display: flex;
     height: 100vh;
-    width: 100%; 
+    width: 100%;
 }
 
-.configuracionLogo{
-    background-color: aquamarine;
+.collage{
+    height:110vh;
+    width:100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    columns:initial;
+    flex-wrap:nowrap;
+}
+
+.configuracionLogo {
+    background-color:rgb(44, 44, 84);
     height: 100%;
     width: 100%;
-    display:flex;
+    display: flex;
     align-self: center;
     justify-content: center;
     text-align: center;
@@ -112,36 +85,53 @@ body{
     flex-wrap: wrap;
 }
 
-.containerQuienesSomos{
-    height: 100vh;
+.tituloHistoria {
+    display: flex;
+    height:50em;
+    width: 50em;
+   
+}
+
+.nuestraHistoria{
+    height: 50%;
     width: 100%;
     display: flex;
-    background-color:transparent;
-    justify-content:center;
-    background-image: url(fondoquienessomos.jpg);
-    background-repeat: no-repeat;
+    text-align: center;
+   
+
+}
+
+.rounded{
+    height: 70%;
+    width: 100%;
+    
+    background-position:left ;
+  
+}
+
+.inicio{
+    display: flex;
+    background-image: unset;
     background-position: center;
-    min-width: 300px;   
-    flex-wrap: wrap; 
-}
-
-.tituloHistoria{
-display: flex;
-justify-items: end;
-align-items: first baseline;
-height: 50%;
-display: block;
+    background-size: cover;
+    justify-self: self-start;
+    vertical-align: baseline;
 
 }
 
-.quienesSomos{
- 
-    background-repeat: no-repeat;
-    background-color:beige;
-    height:80%;
-    width:30%;
-    display:flex;
+.crepe1{
+    height: 50%;
+    width: 50%;
+    display: flex;
+    align-content: space-between;
     text-align:center;
-    margin-top:auto;    
+}
+
+.crepe2{
+    height: 50%;
+    width: 50%;
+    display: flex;
+    align-content: space-between;
+    text-align: center;
 }
 
