--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,37 @@
+.proyecto1 {
+    height: 40%;
+    width: 100%;
+    display: contents;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    font-family:Georgia, 'Times New Roman', Times, serif
+    
+    
 
-.colorBoton {
-    background-color: rgb(212, 155, 112);
-    display: flex;
-    color: grey;
-    border-radius: 2vh;
-    min-width: 300px;
 }
 
 .menuDesplegable {
-    background-color:rgb(171, 33, 125);
-    height: 50%;
+    background-color: rgb(171, 33, 125);
+    height: 40%;
+    width: 100%;
     background-repeat: initial 20% 20%;
     background-color: dimgrey(55, 114, 82);
-    border-top: 2vh;
+    justify-content: end;
+    margin-right: unset;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .pruebaBarra {
     display: flex;
-    width:100%;
-    height: 13vh;
-    align-content: center ;
-    background-color:rgb(171, 33, 125)
+    width: 100%;
+    height: 15vh;
+    align-content: center;
+    background-color: rgb(171, 33, 125);
+    margin-top: 0;
+    margin-bottom: 0%;
+    
 
 }
-
 
 .contactoConfiguracion {
     height: 25%;
@@ -32,11 +40,14 @@
     background-repeat: no-repeat 20% 20%;
     background-position-y: center;
     background-size: 70 20em;
-    margin-inline-start: 10%;
+    margin: 0;
+
 }
 
 .contactoMovil {
     background-position-y: center;
+    margin: 0;
+
 
 }
 
@@ -46,35 +57,31 @@
     background-position-y: center;
     background-size: 50%;
     border-top: 50%;
-    background-color:rgb(44, 44, 84);
+    background-color: rgb(44, 44, 84);
     text-align: center;
+    margin: 0;
 }
 
-.barraInferior {
-    display: flex;
-    
-    height: 5vh;
-    width: 1vh;
+.imagenPresentacion {
+    height: 5%;
+    width: 70%;
+    margin-top: 0%;
+    margin-bottom: 0%;
+
+
 }
 
-.logoBarra {
-    display: flex;
-    height: 100vh;
-    width: 100%;
-}
+.inicioParrafo {
+    height: 20%;
+    width: 30%;
+    float: left;
+    margin-top: 20%;
+    text-align: center;
 
-.collage{
-    height:110vh;
-    width:100%;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    columns:initial;
-    flex-wrap:nowrap;
 }
 
 .configuracionLogo {
-    background-color:rgb(44, 44, 84);
+    background-color: rgb(44, 44, 84);
     height: 100%;
     width: 100%;
     display: flex;
@@ -83,33 +90,46 @@
     text-align: center;
     min-width: 300px;
     flex-wrap: wrap;
+    margin: 0;
 }
 
 .tituloHistoria {
     display: flex;
-    height:50em;
+    height: 50em;
     width: 50em;
-   
+
 }
 
-.nuestraHistoria{
+.nuestraHistoria {
     height: 50%;
     width: 100%;
     display: flex;
+    margin-top: 0;
     text-align: center;
-   
-
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.rounded{
-    height: 70%;
+.rounded {
+    height: 10%;
     width: 100%;
-    
-    background-position:left ;
-  
+    margin-top: 0;
 }
 
-.inicio{
+.fondoQuienes {
+    height: 50%;
+    width: 100%;
+    display: flex;
+
+}
+
+.card {
+    height: 50%;
+    width: 100%;
+    display: flex;
+    align-content: end;
+}
+
+.inicio {
     display: flex;
     background-image: unset;
     background-position: center;
@@ -119,19 +139,31 @@
 
 }
 
-.crepe1{
-    height: 50%;
-    width: 50%;
+
+.footer {
+
+    margin: inherit;
+    width: 100%;
+    height: 13vh;
     display: flex;
-    align-content: space-between;
-    text-align:center;
+    background-color: rgb(44, 44, 84);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    justify-content: center;
+    letter: 1vh;
+
 }
 
-.crepe2{
-    height: 50%;
-    width: 50%;
-    display: flex;
-    align-content: space-between;
-    text-align: center;
+.parteBaja {
+    background-color: rgb(236, 205, 166);
+   margin-top: 0%;
 }
 
+.carousel {
+    height: 40%;
+    width: 100%;
+    display: flex;
+    align-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 0%;
+
+}
